--- a/pb.html
+++ b/pb.html
@@ -24,7 +24,7 @@
         <form action="pb.php" method="post" >
         <div class="insert">
         <pre>
-            echo "탈퇴할 아이디와 비밀번호를 적어주십시오"
+            탈퇴할 아이디와 비밀번호를 적어주십시오
             아이디 : <input type="text" name="id"><br>
             비밀번호 : <input type="password" name="pass"><br>
             <input type="submit" value="탈퇴"> <input type="reset" value="취소">
