--- a/join.html
+++ b/join.html
@@ -24,9 +24,11 @@
         <form action="join.php" method="post" >
         <div class="insert">
         <pre>
+            아이디와 비밀번호는 한글입력이 안됩니다.
+            비밀번호는 7자이상 특수문자를 포함하여야합니다.
             아 이 디 : <input type="text" name="id"><br>
             비밀번호 : <input type="password" name="pass"><br>
-            전화번호 : <input type="text" name="tel"><br>
+            전화번호 : <input type="text" name="tel" style="width: 45px;">-<input type="text" name="tel2" style="width: 45px;">-<input type="text" name="tel3" style="width: 45px;"><br>
             <input type="submit" value="가입"> <input type="reset" value="취소">
             </p>
             <br>
